build_output.txt
   Compiling pg_ripple v0.45.0 (/Users/geir.gronmo/projects/pg-ripple2)
error[E0004]: non-exhaustive patterns: `&ShapeConstraint::Equals(_)` and `&ShapeConstraint::Disjoint(_)` not covered
    --> src/shacl/mod.rs:1785:23
     |
1785 |                 match c {
     |                       ^ patterns `&ShapeConstraint::Equals(_)` and `&ShapeConstraint::Disjoint(_)` not covered
     |
note: `ShapeConstraint` defined here
    --> src/shacl/mod.rs:53:10
     |
  53 | pub enum ShapeConstraint {
     |          ^^^^^^^^^^^^^^^
...
 102 |     Equals(String),
     |     ------ not covered
...
 105 |     Disjoint(String),
     |     -------- not covered
     = note: the matched value is of type `&ShapeConstraint`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
     |
1993 ~                     | ShapeConstraint::Closed { .. } => {},
1994 +                     &ShapeConstraint::Equals(_) | &ShapeConstraint::Disjoint(_) => todo!()
     |

For more information about this error, try `rustc --explain E0004`.
error: could not compile `pg_ripple` (lib) due to 1 previous error
